--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     	Robotic Template
     	http://www.templatemo.com/preview/templatemo_430_robotic
     -->
-    <title>Robotic - Free Responsive Template</title>
+    <title>pagina de un robot</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 	<meta charset="utf-8">
